Restructed the project files so it can be packaged, uploaded to pypi, and installed using pip.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ data/
 __pycache__/
 .DS_Store
 .tags*
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
